--- a/jomopay/src/main/res/values/attrs.xml
+++ b/jomopay/src/main/res/values/attrs.xml
@@ -4,4 +4,18 @@
         <attr name="titleText" format="string" localization="suggested" />
         <attr name="valueColor" format="color" />
     </declare-styleable>
+
+    <declare-styleable name="CircularProgress">
+        <attr name="circular_progress_color" format="color"/>
+        <attr name="circular_progress_size" format="enum">
+            <enum name="Small" value="0"/>
+            <enum name="Normal" value="1"/>
+            <enum name="Large" value="2"/>
+        </attr>
+        <attr name="circular_progress_border_width" format="dimension"/>
+        <attr name="circular_progress_indeterminate" format="boolean"/>
+        <attr name="circular_progress_max" format="integer"/>
+        <attr name="circular_progress_duration" format="integer"/>
+    </declare-styleable>
+
 </resources>
