--- a/jomopay/src/main/res/layout-en/login_dialog.xml
+++ b/jomopay/src/main/res/layout-en/login_dialog.xml
@@ -13,44 +13,30 @@
         app:layout_widthPercent="85%">
 
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_phone"
+        <EditText
+            android:id="@+id/editText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView2"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="22dp">
+            android:layout_marginTop="22dp"
+            android:ems="10"
+            android:hint="Phone Number"
+            android:inputType="phone" />
 
-            <EditText
-                android:id="@+id/editText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Phone Number"
-                android:inputType="phone" />
-        </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_code"
+        <EditText
+            android:id="@+id/editText2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/input_layout_phone"
-            android:layout_alignStart="@+id/input_layout_phone"
-            android:layout_below="@+id/input_layout_phone"
-            android:layout_centerHorizontal="true">
-
-            <EditText
-                android:id="@+id/editText2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:ems="10"
-                android:hint="Pin Code"
-                android:inputType="numberPassword" />
-
-        </android.support.design.widget.TextInputLayout>
-
-
+            android:layout_alignLeft="@+id/editText"
+            android:layout_alignStart="@+id/editText"
+            android:layout_below="@+id/editText"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:ems="10"
+            android:hint="Pin Code"
+            android:inputType="numberPassword" />
 
 
         <ImageView
@@ -76,10 +62,11 @@
             android:id="@+id/loginBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/input_layout_code"
+            android:layout_below="@+id/editText2"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="28dp"
             android:text="Login" />
+
         <RelativeLayout
             android:id="@+id/progressLayout"
             android:layout_width="match_parent"
