--- a/jomopay/src/main/res/layout-en/checkout_dialog.xml
+++ b/jomopay/src/main/res/layout-en/checkout_dialog.xml
@@ -9,8 +9,8 @@
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        app:layout_heightPercent="85%"
-        app:layout_widthPercent="85%">
+        app:layout_heightPercent="100%"
+        app:layout_widthPercent="100%">
 
         <TextView
             android:id="@+id/amount"
@@ -50,7 +50,7 @@
             android:layout_height="100dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="38dp"
+            android:layout_marginTop="30dp"
             android:src="@drawable/jomopay" />
 
         <TextView
@@ -74,22 +74,16 @@
             android:textSize="30sp" />
 
 
-        <RelativeLayout
-            android:id="@+id/progressLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#c0000000"
-            android:visibility="invisible">
 
             <com.projectx.jomopay.components.CircularProgress
                 android:id="@+id/progressBar"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:visibility="visible"
+                android:visibility="invisible"
+                android:layout_below="@+id/merchantName"
+                android:layout_marginTop="47dp"
                 app:circular_progress_color="@color/app_theme_color"
                 app:circular_progress_size="Normal" />
-        </RelativeLayout>
     </android.support.percent.PercentRelativeLayout>
 </android.support.percent.PercentRelativeLayout>
